<resources>
    <string name="app_name">Orien</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="uname_ET_hint">user name</string>
    <string name="stats">stats</string>
    <string name="local_multiplayer_link">Play local game</string>
    <string name="lan_multiplayer_link">Play over LAN</string>
    <string name="row_count_label_text">Number of rows</string>
    <string name="default_row_count">8</string>
    <string name="straight_win_size_label_text">Win size</string>
    <string name="default_straight_win_size">3</string>
    <string name="play_button_text">Play</string>
    <string name="home_button_text">Home</string>
    <string name="game_instructions_link_text">How to play</string>
    <string name="local_multiplayer_header">Local Multiplayer</string>
    <string name="add_player">Add player</string>
    <string name="remove_last">Remove last</string>
    <string name="group_continue_btn_text">Play</string>
    <string name="ai_play_link">Play with AI</string>
    <string name="profile_settings_text">Settings</string>
    <string name="game_options_text">Settings</string>
    <string name="ai_multiplayer_header">Choose difficulty</string>
    <string name="ai_easy_text">Easy</string>
    <string name="ai_normal_text">Normal</string>
    <string name="ai_hard_text">Hard</string>
    <string name="settings_save_btn_text">Save and close</string>
    <string name="lan_multiplayer_host">Host game</string>
    <string name="lan_multiplayer_join">Join game</string>
    <string name="player_count_label_text">Number of players</string>
    <string name="join_game_prompt">Choose a game to join</string>
    <string name="host_game_out_of_bounds_error_message">Maximum number of players is 4</string>
    <string name="room_name_label_text">Room name</string>
    <string-array name="num_players">
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
</resources>
