<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".activities.MainActivity">

    <android.support.v7.widget.ButtonBarLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true">

        <ImageView
            android:layout_width="@dimen/image_button"
            android:layout_height="@dimen/image_button"
            android:contentDescription="@string/game_options_text"
            android:onClick="onSettingsClick"
            app:srcCompat="@drawable/ic_settings"/>

        <ImageView
            android:id="@+id/soundControlBtn"
            android:layout_width="@dimen/image_button"
            android:layout_height="@dimen/image_button"
            android:contentDescription="@string/profile_settings_text"
            android:onClick="onSoundClick"
            app:srcCompat="@drawable/ic_volume_up"/>
    </android.support.v7.widget.ButtonBarLayout>

    <TextView
        android:id="@+id/appNameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/app_name"
        android:textSize="@dimen/large_text"/>


    <TextView
        android:id="@+id/localMultiplayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appNameView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:onClick="localMultiplayerClick"
        android:text="@string/local_multiplayer_link"
        android:textColor="@color/textLink"/>


    <TextView
        android:id="@+id/wifiMultiplayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/localMultiplayer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:onClick="lanMultiplayerClick"
        android:text="@string/lan_multiplayer_link"
        android:textColor="@color/textLink"
        />

    <TextView
        android:id="@+id/aiPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/wifiMultiplayer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:onClick="aiPlayClick"
        android:text="@string/ai_play_link"
        android:textColor="@color/textLink"
        />


    <TextView
        android:id="@+id/howToPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/aiPlay"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/game_instructions_link_text"
        android:textColor="@color/textLink"
        />
</RelativeLayout>