<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="localGroupMembers"
            type="java.util.List"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        tools:context=".activities.LocalGroupActivity">

        <TextView
            android:id="@+id/localMultiplayerHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:text="@string/local_multiplayer_header"
            android:textSize="@dimen/large_text"
            />

        <android.support.v7.widget.ButtonBarLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addPlayerBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7.5dp"
                android:background="@drawable/btn_bg"
                android:onClick="onClickAddPlayer"
                android:padding="7.5dp"
                android:text="@string/add_player"/>


            <Button
                android:id="@+id/remPlayerBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7.5dp"
                android:background="@drawable/btn_bg"
                android:onClick="onClickRemovePlayer"
                android:padding="7.5dp"
                android:text="@string/remove_last"/>

        </android.support.v7.widget.ButtonBarLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/localMultiplayerPlayers"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:padding="15dp"
            tools:listitem="@layout/local_group_list_item"/>

        <Button
            android:id="@+id/localGroupContinueBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:background="@drawable/btn_bg"
            android:onClick="onPlayClick"
            android:padding="7.5dp"
            android:text="@string/group_continue_btn_text"
            />

    </LinearLayout>
</layout>